--- a/style.css
+++ b/style.css
@@ -163,6 +163,7 @@ p{
     text-align: center;
 }
 .form-section{
+    display: flex;
     margin-top: 30px;
     background-color: #FFF4D6;
 }
@@ -170,9 +171,12 @@ p{
     padding: 8px 15px;
     font-size: 16px;
     background-color: #D9D9D9;
+    color: #7D7D7D;
+    border: none;
+    margin: 0;
 }
 .form-section a{
-    padding: 8px 15px;
+    padding: 6px 15px;
 }
 
 footer{
