input margin added

--- a/style.css
+++ b/style.css
@@ -174,9 +174,10 @@ p{
     background-color: #D9D9D9;
     color: #7D7D7D;
     border: none;
+    margin-right: -5px;
 }
 .form-section a{
-    padding: 6px 15px;
+    padding: 7px 15px;
 }
 footer{
     background: #000;
