--- a/style.css
+++ b/style.css
@@ -175,10 +175,11 @@ p{
     color: #7D7D7D;
     border: none;
     margin-right: -5px;
-    border-radius: 5px;
+    border-radius: 5px 0px 0px 5px;
 }
 .form-section a{
     padding: 7px 15px;
+    border-radius: 0px 5px 5px 0px;
 }
 footer{
     background: #000;
