--- a/style.css
+++ b/style.css
@@ -85,8 +85,9 @@ p{
 .other-amount p{
     font-size: 14px;
     padding-top: 20px;
-    padding-bottom: 10px;
+    margin-bottom: 5px;
     text-align: center;
+    color: #BCBCBC;
 }
 .card-section{
     display: flex;
@@ -129,7 +130,7 @@ p{
     padding: 10px 15px;
 }
 .gallery-list li a{
-    color: #000;
+    color:  #000;
     padding: 10px 15px;
     font-weight: 700;
 }
