--- a/style.css
+++ b/style.css
@@ -82,12 +82,13 @@ p{
     border: 2px solid red;
     color: red;
 }
-.other-amount p{
-    font-size: 14px;
-    padding-top: 20px;
-    margin-bottom: 5px;
+.other-amount input{
     text-align: center;
+    border: none;
+    padding-bottom: 5px;
+    font-size: 12px;
     color: #BCBCBC;
+    border-bottom: 1px solid;
 }
 .card-section{
     display: flex;
